--- a/.HTACCESS
+++ b/.HTACCESS
@@ -6,10 +6,12 @@ RewriteRule ^php([_\-a-zA-Z\.0-9\/]*) php$1 [QSA,L]
 RewriteRule ^(.*)/images/(.*)$ $1/images/$2 [QSA,L]
 RewriteRule ^(.*)/javaScript/(.*)$ $1/javaScript/$2 [QSA,L]
 RewriteRule ^(.*)/css/(.*)$ $1/css/$2 [QSA,L]
+RewriteRule ^(.*)/versions/(.*)$ $1/versions/$2 [QSA,L]
 
 RewriteRule ^images/(.*)$ images/$1 [QSA,L]
 RewriteRule ^javaScript/(.*)$ javaScript/$1 [QSA,L]
 RewriteRule ^css/(.*)$ css/$1 [QSA,L]
+RewriteRule ^versions/(.*)$ versions/$1 [QSA,L]
 
 RewriteRule ^([_\-a-zA-Z\.0-9\/]*)\/([_\-a-zA-Z\.0-9\/]*)\/([_\-a-zA-Z\.0-9\/]*)$ index.php?c=$1&m=$2&a=$3 [QSA,L]
 RewriteRule ^([_\-a-zA-Z\.0-9\/]*)\/([_\-a-zA-Z\.0-9\/]*)$ index.php?c=$1&m=$2 [QSA,L]
